# BeeldHerkenning

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  ColorDetect.cpp  ColorDetect.hpp  ColoredShape.cpp  ColoredShape.hpp  ImageRecognition  ImageRecognition.cpp  ImageRecognition.hpp  Main.cpp  Makefile  ShapeDetect.cpp  ShapeDetect.hpp  batch.txt  cmake_install.cmake  config.hpp
